--- a/footer.css
+++ b/footer.css
@@ -14,6 +14,7 @@ footer{
     padding: 20px 0;
     opacity: 0.5;
     line-height: 23px;
+    font-size: 14px;
 }
 .footer-card1 a img{
     width: 10%;
@@ -21,7 +22,7 @@ footer{
 }
 .fot-head{
     padding-bottom: 30px;
-    font-weight: 800;
+    font-weight: 700;
 }
 .input-email{
     position: relative;
