--- a/main.css
+++ b/main.css
@@ -5,26 +5,37 @@
 }
 
 .address-container{
-    height: 110px;
-    display: flex;
-    justify-content: center;
-    gap: 100px;
+    height: 90px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* justify-content: center; */
+    /* gap: 100px; */
     align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.066);
     box-shadow: 5px 7px 20px 7px rgba(0, 0, 0, 0.075);
     border-radius: 10px;
 }
 .address{
-    text-align: center;
-    height: 80px;
-    padding-right: 90px;
     border-right: 2px solid #B6B6B6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .address h6{
     font-size: 15px;
+    padding: 10px 0;
 }
 .address p{
-    font-size: 12px;
+    font-size: 12px;  
+}
+.location{
+    padding: 4px 6px;
+    border-radius: 50%;
+    /* border: 1px solid red; */
+    font-size: 14px;
+    color: white;
+    background-color: #F48E28;
 }
 #address{
     border: none;
@@ -42,14 +53,14 @@
 }
 .product-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3,1fr);
     column-gap: 30px;
     row-gap: 30px;
     padding: 30px 0;
 }
 .product{
     width: 100%;
-    height: 320px;
+    /* height: 320px; */
     border-radius: 15px;
     border:1px solid rgba(15, 14, 14, 0.028);
     box-shadow: 1px 1px 20px 7px rgba(0, 0, 0, 0.117);
@@ -68,10 +79,15 @@
 }
 .star{
     display: flex;
+    align-items: center;
+    gap: 5px;
     width: 100%;
 }
-.star img{
-    width: 30%;
+.fa-star{
+    color: #F48E28;
+}
+.rating> p{
+    margin-top: 20px;
 }
 .cart{
     padding: 12px 12px;
@@ -99,13 +115,15 @@
     box-shadow: 1px 1px 20px 5px rgba(0, 0, 0, 0.187);
 }
 .food-container{
-    display: flex;
-    gap:53px;
-    padding: 40px 0;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:30px;
+    /* padding: 20px 0; */
+    margin-top: 50px;
 }
 .food-desc{
-    width: 28%;
-    height: 150px;
+    /* width: 28%; */
+    /* height: 150px; */
     text-align: center;
     border: 1px solid rgba(36, 31, 31, 0.184);
     padding: 50px 20px 90px 20px;
@@ -125,13 +143,14 @@
 .client-container{
     display: flex;
     gap: 20px;
-    height: 400px;
+    /* height: 400px; */
     margin-top: 40px;
     /* border: 1px solid red; */
+    margin-bottom: 80px;
 }
 .client-desc{
     width: 50%;
-    height: 300px;
+    /* height: 300px; */
     /* border: 2px solid rgba(0, 0, 0, 0.333); */
     box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.187);
     border-radius: 10px;
@@ -139,7 +158,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0 30px;
+    padding: 20px 30px;
 }
 .client-title{
     display: flex;
@@ -170,6 +189,7 @@
 }
 .client-arrow{
     position: relative;
+    /* width: 100%; */
 }
 .arrow1{
     position: absolute;
@@ -184,7 +204,7 @@
 .main-footer{
     width: 100%;
     margin: 0 auto;
-    height: 240px;
+    /* height: 240px; */
     margin-bottom: 100px;
     background-color:black;
     border-radius: 30px;
@@ -192,6 +212,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    padding: 10px;
 }
 .main-footer-img{
     width: 40%;
@@ -205,8 +226,9 @@
 }
 .main-footer-desc{
     color: white;
-    width: 40%;
-    margin-right: 50px;
+    width: 50%;
+    padding: 0px 20px;
+    /* margin-right: 50px; */
 }
 .main-footer-desc p{
     padding: 15px 0;
@@ -216,12 +238,18 @@
 .button-field{
     display: inline-block;
     position: relative;
+    width: 70%;
+    padding: 15px 0;
+    /* border: 1px solid red; */
+    background-color: white;
+    border-radius: 10px;
 }
 .main-footer-desc input{
-    padding: 13px 180px 18px 20px;
+    /* padding: 13px 180px 18px 20px; */
     border: none;
-    border-radius: 10px;
+   padding-left: 10px;
     outline: 0;
+    /* padding: 10px 0; */
 }
 
 .main-footer-desc button{
