--- a/header.css
+++ b/header.css
@@ -50,7 +50,7 @@ p{
    
 }
 #cart-image{
-    height: 60px;
+    /* height: 60px; */
     padding-left: 20px;
     padding-bottom: 20px;   
 }
@@ -68,9 +68,11 @@ p{
     background-image: url("./bg.png");
     background-repeat: no-repeat;
     background-position: center;
+    margin-bottom: 30px;
 }
 .header-banner{
-    padding: 60px 0;
+    /* padding: 60px 0; */
+    /* padding-bottom: 80px; */
     width: 60%;
 }
 .header-banner-desc{
